# sql

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: begin_transaction.toml  commit_transaction.toml  rollback_transaction.toml  select_transaction.toml
permissions/schemas/: schema.json
src/: error.rs  lib.rs  plugin.rs  transaction.rs
