[package]
name = "tauri-plugin-shion-sql"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-shion-sql"

[dependencies]
tauri = { version = "2.0.0-rc.0" }
serde = "1.0"
thiserror = "1.0"
anyhow = "1"
serde_json = "1.0"
time = "0.3"
futures-core = "0.3"
sqlx = "0.8"
sea-orm = { version = "1.1.0-rc.1", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1", features = ["sync"] }
indexmap = { version = "2", features = ["serde"] }


[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.0", features = ["build"] }
